# acit-2515-store

./: .gitignore  README.md  data.db  p01_store.md  products.csv  pyproject.toml  requirements.txt
material/: p02_store_flask_p1.md  p03_store_flask_p2.md
src/: app.py  database.py  main.py  manage-db.py  manage.py  manage_db.py
src/blueprints/: __init__.py
src/blueprints/categories/: __init__.py  route.py
src/blueprints/categories/templates/categories/: details.html  index.html
src/blueprints/customers/: __init__.py  route.py
src/blueprints/customers/templates/customers/: details.html  index.html
src/blueprints/orders/: __init__.py  route.py
src/blueprints/orders/templates/orders/: details.html  index.html
src/blueprints/products/: __init__.py  route.py
src/blueprints/products/templates/products/: details.html  index.html
src/models/: __init__.py  category.py  customer.py  order.py  product.py  productorder.py
src/routes/: __init__.py  categories.py  customers.py  products.py
src/static/: styles.css
src/templates/: base.html  categories.html  category_details.html  customer_details.html  customers.html  error.html  home.html  index.html  product_details.html  products.html
src/tests/: test_products.py
src/util/: __init__.py  database.py  logger.py
