[project]
name = "store"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-sqlalchemy>=3.1.1",
    "greenlet==3.2.4",
    "iniconfig==2.3.0",
    "packaging==25.0",
    "pluggy==1.6.0",
    "pygments==2.19.2",
    "pytest==9.0.1",
    "sqlalchemy==2.0.44",
    "typing-extensions==4.15.0",
]

[tool.pytest.ini_options]
minversion = "8.1"
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
]
